ManifiestosEGI/overlays/prod/patch-images.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pagina-web
spec:
  template:
    spec:
      containers:
        - name: pagina-web
          image: ignaciosa/front:v6
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  template:
    spec:
      containers:
        - name: backend
          image: ignaciosa/back:v6
